更新首页内容

--- a/index.html
+++ b/index.html
@@ -17,20 +17,14 @@
         </div>
         <div class="row">
             <div class="card horizontal">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <a href="https://alg4.ikesnowy.com">
-                        <img src="1.png" alt="" class="activator"/>
-                    </a>
+                <div class="card-image">
+                    <img src="1.png" alt="" class="activator"/>
                 </div>
                 <div class="card-stacked">
                     <div class="card-content">
                         <div class="row"><span class="card-title">《算法（第四版）》C# 题解</span></div>
                         <div class="row">
                             <p>已完成到 2.2-Merge Sort </p>
-                        </div>
-                        <div class="row">
-                            <p>博客链接</p>
-                            <p><a href="https://ikesnowy.cnblogs.com">https://ikesnowy.cnblogs.com</a></p>
                         </div>
                         <div class="row">
                             <p>最后更新：2018年7月3日</p>
