update index comment

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <h4>沈星繁</h4>
-            // TODO: 想一句不落俗套的寄语
+            <div class="green-text text-darken-2">// TODO: 想一句不落俗套的寄语</div>
         </div>
         <div class="row">
             <div class="card horizontal">
