--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
     <link href="https://cdn.bootcss.com/materialize/1.0.0-rc.1/css/materialize.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/materialize/1.0.0-rc.1/js/materialize.min.js"></script>
-    <title>沈星繁-主页</title>
+    <title>多宝阁-沈星繁</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <h4>沈星繁</h4>
-            <div class="green-text text-darken-2">// TODO: 想一句不落俗套的寄语</div>
+            <h3>多宝阁</h3>
         </div>
         <div class="row">
-            <div class="card horizontal">
+            <div class="card horizontal hoverable">
                 <div class="card-image">
                     <img src="1.png" alt="" class="activator"/>
                 </div>
                 <div class="card-stacked">
                     <div class="card-content">
-                        <div class="row"><span class="card-title">《算法（第四版）》C# 题解</span></div>
+                        <div class="row"><span class="card-title truncate">《算法（第四版）》C# 题解</span></div>
                         <div class="row">
                             <p>已完成到 2.2-Merge Sort </p>
                         </div>
