修改目录样式

--- a/index.html
+++ b/index.html
@@ -1,35 +1,50 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.bootcss.com/materialize/1.0.0-rc.1/css/materialize.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/materialize/1.0.0-rc.1/js/materialize.min.js"></script>
+    <link href="https://cdn.bootcss.com/materialize/1.0.0-rc.1/css/materialize.min.css" rel="stylesheet" media="screen,projection">
     <title>多宝阁-沈星繁</title>
 </head>
+
 <body>
     <div class="container">
         <div class="row">
             <h3>多宝阁</h3>
         </div>
         <div class="row">
-            <div class="card horizontal hoverable">
+            <div class="card large horizontal hoverable">
                 <div class="card-image">
-                    <img src="1.png" alt="" class="activator"/>
+                    <img class="responsive-img" src="1.png" alt="" class="activator" />
                 </div>
                 <div class="card-stacked">
                     <div class="card-content">
-                        <div class="row"><span class="card-title truncate">《算法（第四版）》C# 题解</span></div>
                         <div class="row">
-                            <p>已完成到 2.2-Merge Sort </p>
+                            <span class="card-title truncate">《算法（第四版）》C# 题解</span>
                         </div>
                         <div class="row">
-                            <p>最后更新：2018年7月3日</p>
+                            已完成目录
+                            <ul>
+                                <li>
+                                    第一章：基础
+                                </li>
+                                <li>
+                                    第二章：排序
+                                    <ul>
+                                        <li class="truncate">2.1 初级排序算法
+                                        </li>
+                                        <li class="truncate">2.2 归并排序
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                            最后更新：2018年7月3日
                         </div>
                     </div>
-                    <div class="card-action ">
+                    <div class="card-action">
                         <a href="https://github.com/ikesnowy/Algorithms-4th-Edition-in-Csharp">GitHub</a>
                         <a class="right" href="https://alg4.ikesnowy.com">立即查看</a>
                     </div>
@@ -37,10 +52,13 @@
             </div>
         </div>
     </div>
+    <footer class="footer-copyright">
+        <div class="container">
+            © 2018 Copyright 沈星繁
+        </div>
+    </footer>
+    <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.bootcss.com/materialize/1.0.0-rc.1/js/materialize.min.js"></script>
 </body>
-<footer class="footer-copyright">
-    <div class="container">
-        © 2018 Copyright 沈星繁
-    </div>
-</footer>
+
 </html>
