--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
                                         </li>
                                         <li class="truncate">2.2 归并排序
                                         </li>
+                                        <li class="truncate">2.3 快速排序
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
-                            最后更新：2018年7月3日
+                            最后更新：2018年8月7日
                         </div>
                     </div>
                     <div class="card-action">
