--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/materialize/1.0.0-rc.1/css/materialize.min.css" rel="stylesheet" media="screen,projection">
+    <link href="https://cdn.bootcss.com/materialize/1.0.0-rc.2/css/materialize.min.css" rel="stylesheet" media="screen,projection">
     <title>多宝阁-沈星繁</title>
 </head>
 
@@ -40,10 +40,12 @@
                                         </li>
                                         <li class="truncate">2.3 快速排序
                                         </li>
+                                        <li class="truncate">2.4 优先队列                                            
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
-                            最后更新：2018年8月7日
+                            最后更新：2019年1月2日
                         </div>
                     </div>
                     <div class="card-action">
@@ -56,7 +58,7 @@
     </div>
     <footer class="footer-copyright">
         <div class="container">
-            © 2018 Copyright 沈星繁
+            © 2019 Copyright 沈星繁
         </div>
     </footer>
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
