--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
                                 <li>
                                     第二章：排序
                                 </li>
+                                <li>
+                                    第三章：搜索
+                                    <ul>
+                                        <li>
+                                            3.1 符号表 Symbol Table
+                                        </li>
+                                    </ul>
+                                </li>
                             </ul>
-                            最后更新：2019年1月27日
+                            最后更新：2019年4月14日
                         </div>
                     </div>
                     <div class="card-action">
