--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <li>
                                     第三章：搜索
                                     <ul>
-                                        <li>
+                                        <li class="trucate">
                                             3.1 符号表 Symbol Table
                                         </li>
                                     </ul>
