--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
                                         <li class="truncate">
                                             3.1 符号表 Symbol Table
                                         </li>
+                                        <li class="truncate">
+                                            3.2 二叉搜索树 Binary Search Trees
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
-                            最后更新：2019年4月14日
+                            最后更新：2020年2月9日
                         </div>
                     </div>
                     <div class="card-action">
